changed page header to view correctly on safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -112,7 +112,6 @@ button:focus,
 .page-header__item {
   flex: 0 1 auto;
   width: 100px;
-  height: auto;
 }
 
 .page-header__item:last-child {
